force-app/main/default/objects/WasteGasBurner__c/WasteGasBurner__c.object-meta.xml
<CustomObject>
    <label>WasteGasBurner</label>
    <nameField>
        <displayFormat>WGB-{0000}</displayFormat>
        <label>WasteGasBurner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WasteGasBurners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>