force-app/main/default/objects/WasteGasBurner__c/fields/Back_up_Power_Supply__c.field-meta.xml
<CustomField>
    <fullName>Back_up_Power_Supply__c</fullName>
    <label>Back-up Power Supply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>