force-app/main/default/objects/WasteGasBurner__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No Certification Required</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>UL Certification (Control Panel Only)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>