force-app/main/default/objects/WasteGasBurner__c/fields/Control_Panel_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Control_Panel_Alarm__c</fullName>
    <label>Control Panel Alarm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Audible</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Visible</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>