force-app/main/default/objects/WasteGasBurner__c/fields/Control_Panel_Heater__c.field-meta.xml
<CustomField>
    <fullName>Control_Panel_Heater__c</fullName>
    <label>Control Panel Heater</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>