force-app/main/default/objects/WasteGasBurner__c/fields/Converted_Flow_Rate__c.field-meta.xml
<CustomField>
    <fullName>Converted_Flow_Rate__c</fullName>
    <label>Converted Flow Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>