force-app/main/default/objects/WasteGasBurner__c/fields/Converted_Pilot_Supply_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Converted_Pilot_Supply_Pressure__c</fullName>
    <label>Converted Pilot Supply Pressure</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>