force-app/main/default/objects/WasteGasBurner__c/fields/Document_IDs__c.field-meta.xml
<CustomField>
    <fullName>Document_IDs__c</fullName>
    <label>Document IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>