force-app/main/default/objects/WasteGasBurner__c/fields/Enclosure_Type__c.field-meta.xml
<CustomField>
    <fullName>Enclosure_Type__c</fullName>
    <label>Enclosure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>NEMA 4</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>NEMA 4X (304 SS)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>NEMA 4X (316 SS)</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>NEMA 4X (Fiberglass)</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>NEMA 7</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>NEMA 7/4X</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>