force-app/main/default/objects/WasteGasBurner__c/fields/Engineering_Specials__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Specials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engineering Specials</label>
    <type>Checkbox</type>
</CustomField>