force-app/main/default/objects/WasteGasBurner__c/fields/Flame_Sensor__c.field-meta.xml
<CustomField>
    <fullName>Flame_Sensor__c</fullName>
    <label>Flame Sensor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Dual</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Single</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>