force-app/main/default/objects/WasteGasBurner__c/fields/FlameSensorOpt__c.field-meta.xml
<CustomField>
    <fullName>FlameSensorOpt__c</fullName>
    <label>FlameSensorOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>