force-app/main/default/objects/WasteGasBurner__c/fields/Flow_Rate_Units__c.field-meta.xml
<CustomField>
    <fullName>Flow_Rate_Units__c</fullName>
    <label>Flow Rate Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCFH</fullName>
            </value>
            <value>
                <fullName>SCFM</fullName>
            </value>
            <value>
                <fullName>SCMH</fullName>
            </value>
            <value>
                <fullName>Nm3/h</fullName>
            </value>
            <value>
                <fullName>lb/h</fullName>
            </value>
            <value>
                <fullName>kg/h</fullName>
            </value>
            <value>
                <fullName>Am3/h</fullName>
            </value>
            <value>
                <fullName>ACFM</fullName>
            </value>
            <value>
                <fullName>ACFH</fullName>
            </value>
            <value>
                <fullName>Nm3/min</fullName>
            </value>
            <value>
                <fullName>kg/min</fullName>
            </value>
            <value>
                <fullName>lb/min</fullName>
            </value>
            <value>
                <fullName>Am3/min</fullName>
            </value>
            <value>
                <fullName>kg/s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>