force-app/main/default/objects/WasteGasBurner__c/fields/Gage__c.field-meta.xml
<CustomField>
    <fullName>Gage__c</fullName>
    <label>Gage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>