force-app/main/default/objects/WasteGasBurner__c/fields/Ignitor_Control__c.field-meta.xml
<CustomField>
    <fullName>Ignitor_Control__c</fullName>
    <label>Ignitor Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>