force-app/main/default/objects/WasteGasBurner__c/fields/IgnitorOpt__c.field-meta.xml
<CustomField>
    <fullName>IgnitorOpt__c</fullName>
    <label>IgnitorOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>