force-app/main/default/objects/WasteGasBurner__c/fields/Lead_Time_Site_20__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Site_20__c</fullName>
    <label>Lead Time Site 20</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>