force-app/main/default/objects/WasteGasBurner__c/fields/Lower_Stack_Pedestal_Matl__c.field-meta.xml
<CustomField>
    <fullName>Lower_Stack_Pedestal_Matl__c</fullName>
    <label>Lower Stack/Pedestal Matl</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>316 SS</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>304 SS</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Carbon Steel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>