force-app/main/default/objects/WasteGasBurner__c/fields/Non_Discountable_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Discountable_Price__c</fullName>
    <label>Non Discountable Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>