force-app/main/default/objects/WasteGasBurner__c/fields/OB020__c.field-meta.xml
<CustomField>
    <fullName>OB020__c</fullName>
    <label>OB020</label>
    <length>100</length>
    <type>Text</type>
</CustomField>