force-app/main/default/objects/WasteGasBurner__c/fields/Part_Number_Base_Original__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_Base_Original__c</fullName>
    <label>Part_Number_Base_Original</label>
    <length>30</length>
    <type>Text</type>
</CustomField>