force-app/main/default/objects/WasteGasBurner__c/fields/Pedestal_Connection__c.field-meta.xml
<CustomField>
    <fullName>Pedestal_Connection__c</fullName>
    <label>Pedestal Connection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>150 # ANSI Flange</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>PN16</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>PN10/16</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Anchor Plate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>