force-app/main/default/objects/WasteGasBurner__c/fields/Pilot_Gas__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Gas__c</fullName>
    <label>Pilot Gas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <label>Digester Gas</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Natural Gas</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Propane</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>