force-app/main/default/objects/WasteGasBurner__c/fields/Pilot_Supply_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Supply_Pressure__c</fullName>
    <label>Pilot Supply Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>