force-app/main/default/objects/WasteGasBurner__c/fields/Process_Parameters_Flag__c.field-meta.xml
<CustomField>
    <fullName>Process_Parameters_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Parameters Flag</label>
    <type>Checkbox</type>
</CustomField>