force-app/main/default/objects/WasteGasBurner__c/fields/Quote_Output_for_proposal__c.field-meta.xml
<CustomField>
    <fullName>Quote_Output_for_proposal__c</fullName>
    <label>Quote Output for proposal</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>