force-app/main/default/objects/WasteGasBurner__c/fields/Select_Model__c.field-meta.xml
<CustomField>
    <fullName>Select_Model__c</fullName>
    <label>Select Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8391B</fullName>
            </value>
            <value>
                <fullName>8392B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>