force-app/main/default/objects/WasteGasBurner__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02</fullName>
                <label>2&quot; (50mm)</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>3&quot; (80mm)</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>4&quot; (100mm)</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>6&quot; (150mm)</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>8&quot; (200mm)</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10&quot; (250mm)</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12&quot; (300mm)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>