force-app/main/default/objects/WasteGasBurner__c/fields/Stand_Control_Material__c.field-meta.xml
<CustomField>
    <fullName>Stand_Control_Material__c</fullName>
    <label>Stand Control Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>316 SS</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Galvanized Steel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>