force-app/main/default/objects/WasteGasBurner__c/fields/Thermocouple_Material__c.field-meta.xml
<CustomField>
    <fullName>Thermocouple_Material__c</fullName>
    <label>Thermocouple Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>N/A</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Aluminum Head</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>316 SS Head</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>