force-app/main/default/objects/WasteGasBurner__c/fields/Upper_Shroud_Stack_Matl__c.field-meta.xml
<CustomField>
    <fullName>Upper_Shroud_Stack_Matl__c</fullName>
    <label>Upper Shroud/Stack Matl</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>316 SS</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>304 SS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>