force-app/main/default/objects/WasteGasBurner__c/validationRules/A1Upper_Shroud_Stack_Matl_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>A1Upper_Shroud_Stack_Matl_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL(Upper_Shroud_Stack_Matl__c,&apos;&apos; ),
Bypass__c = FALSE,
Product_Material_and_Options_Flag__c= TRUE
)</errorConditionFormula>
    <errorMessage>Upper Shroud/Stack Matl : Please select a value from the drop down</errorMessage>
</ValidationRule>