force-app/main/default/objects/WasteGasBurner__c/validationRules/A2Lower_Stack_Pedestal_Matl_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>A2Lower_Stack_Pedestal_Matl_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL(Lower_Stack_Pedestal_Matl__c ,&apos;&apos; ),
Bypass__c = FALSE,
Product_Material_and_Options_Flag__c= TRUE
)</errorConditionFormula>
    <errorMessage>Lower Stack/Pedestal Matl : Please select a value from the drop down</errorMessage>
</ValidationRule>