force-app/main/default/objects/WasteGasBurner__c/validationRules/A3Pedestal_Connection_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>A3Pedestal_Connection_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL(Pedestal_Connection__c ,&apos;&apos; ),
Bypass__c = FALSE,
Product_Material_and_Options_Flag__c= TRUE
)</errorConditionFormula>
    <errorMessage>Pedestal Connection : Please select a value from the drop down</errorMessage>
</ValidationRule>