force-app/main/default/objects/WasteGasBurner__c/validationRules/A8Control_Panel_Alarm_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>A8Control_Panel_Alarm_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK(TEXT(  Control_Panel_Alarm__c ))
)&amp;&amp;
( Bypass__c = FALSE)&amp;&amp;
(Product_Material_and_Options_Flag__c=true)</errorConditionFormula>
    <errorMessage>Control Panel Alarm : Please select a value from the drop down</errorMessage>
</ValidationRule>