force-app/main/default/objects/WasteGasBurner__c/validationRules/AA1_Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>AA1_Quantity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(Quantity__c&lt;=0)
&amp;&amp;
( Bypass__c = FALSE)&amp;&amp;
(Product_Material_and_Options_Flag__c=true))</errorConditionFormula>
    <errorMessage>Quantity : Please enter a positive Integer Value</errorMessage>
</ValidationRule>