force-app/main/default/objects/WasteGasBurner__c/validationRules/B1Stand_Control_Material_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>B1Stand_Control_Material_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK(TEXT(  Stand_Control_Material__c ))
)&amp;&amp;
( Bypass__c = FALSE)&amp;&amp;
(Product_Material_and_Options_Flag__c=true)</errorConditionFormula>
    <errorMessage>Stand Control Material : Please select a value from the drop down</errorMessage>
</ValidationRule>