force-app/main/default/objects/WasteGasBurner__c/validationRules/B3Step_Down_Transformer_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>B3Step_Down_Transformer_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK(TEXT(  Step_Down_Transformer__c ))
)&amp;&amp;
( Bypass__c = FALSE)&amp;&amp;
(Product_Material_and_Options_Flag__c=true)</errorConditionFormula>
    <errorMessage>Step Down Transformer : Please select a value from the drop down</errorMessage>
</ValidationRule>