force-app/main/default/objects/WasteGasBurner__c/validationRules/B4Back_up_Power_Supply_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>B4Back_up_Power_Supply_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK(TEXT( Back_up_Power_Supply__c ))
)&amp;&amp;
(Product_Material_and_Options_Flag__c=true)&amp;&amp;
( Bypass__c = FALSE)</errorConditionFormula>
    <errorMessage>Back-up Power Supply : Please select a value from the drop down</errorMessage>
</ValidationRule>