force-app/main/default/objects/WasteGasBurner__c/validationRules/PartNumber_Base_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PartNumber_Base_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
LEN(Part_Number_Base__c )&lt;&gt;19,
PartNumberBase_Checkbox__c=true
)</errorConditionFormula>
    <errorMessage>ASSYPARTNOBASE should be 19 characters</errorMessage>
</ValidationRule>