force-app/main/default/objects/WasteGasBurner__c/validationRules/Sec1aPilot_Gas_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>Sec1aPilot_Gas_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Pilot_Gas__c , &apos;&apos;)
)&amp;&amp;
( Bypass__c = FALSE)&amp;&amp;
(Process_Parameters_Flag__c=true)</errorConditionFormula>
    <errorMessage>Pilot Gas : Please select a value from the drop down</errorMessage>
</ValidationRule>