force-app/main/default/objects/WasteGasBurner__c/validationRules/Sec1bPilot_Supply_Pressure_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>Sec1bPilot_Supply_Pressure_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
ISBLANK(Pilot_Supply_Pressure__c )
)&amp;&amp;
( Bypass__c = FALSE)&amp;&amp;
(Process_Parameters_Flag__c=true)</errorConditionFormula>
    <errorMessage>Pilot Supply Pressure : Please Enter a Value</errorMessage>
</ValidationRule>