force-app/main/default/objects/WasteGasBurner__c/validationRules/Sec1cPressure_Units_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Sec1cPressure_Units_Val</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Pressure_Setting_Units__c, &apos;&apos;)
)&amp;&amp;
( Bypass__c = FALSE)&amp;&amp;
(Process_Parameters_Flag__c=true)</errorConditionFormula>
    <errorMessage>Pressure Setting Units : Please select a value from the drop down</errorMessage>
</ValidationRule>